@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-04T16:08:34Z",
-  "count" : 5,
-  "count_minmax" : [ 2, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-06-05T00:44:18Z",
+  "count" : 16,
+  "count_minmax" : [ 2, 16 ],
+  "count_decinc" : [ -0, +16 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
