@@ -1,6 +1,6 @@
 {
-  "count": 67,
-  "uniques": 2,
+  "count": 78,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-05-24T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 5,
-      "uniques": 2
+      "count": 16,
+      "uniques": 3
     }
   ]
 }
